Add USING_G1 detection in detailed logging.